# madrid-rental-finder

./: README.md
.brv/: config.json
.brv/context-tree/: .snapshot.json
.github/workflows/: build-and-push.yaml  dashboard.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/.brv/: config.json
backend/.brv/context-tree/: .snapshot.json
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_remove_spotahome.py
backend/scripts/: fix_neighborhoods.py  seed.py
backend/src/mrf/: __init__.py  __main__.py  cli.py  neighborhoods.py  reconcile.py
backend/src/mrf/api/: main.py  schemas.py
backend/src/mrf/core/: config.py  logging.py
backend/src/mrf/db/: models.py  session.py
backend/src/mrf/scrapers/: backfill.py  base.py  cf_browser.py  enalquiler.py  habitaclia.py  pisos.py  spotahome.py  tranquiler.py  yaencontre.py
backend/tests/: conftest.py  test_api_listings.py  test_scrapers.py
docs/: CNAME  _config.yml  index.html
docs/architecture/: README.md  database-schema.md  gitops-deployment.md  implementation-plan.md  scraping-strategy.md
docs/qa/: frontend-qa-report.md  security-review.md
docs/research/: index.html  rental-costs.md  safety-transport.md  scraping-feasibility.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/components/: FilterPanel.tsx  ListingDrawer.tsx
frontend/src/hooks/: useFilters.ts  useLastVisit.ts
k8s/argocd/: madrid-rental-finder-app.yaml
(+27 files in other folders)
